2001-06-08  Dave Peticolas  <dave@krondo.com>

	* src/gnome/new-user-callbacks.c
	(on_chooseAccountTypesPage_prepare): suspend & resume gui
	refreshes while loading accounts

	* src/gnome/new-user-funs.c (gnc_create_newUserDialog): make clist
	column titles passive

	* src/gnome/new-user-callbacks.c
	(on_chooseAccountTypesPage_prepare): use pointer<->int conversion
	macros
	(gnc_get_ea_locale_dir): take out debugging messages
	(on_newAccountTypesList_unselect_row): fix bug
	(on_newAccountTypesList_select_row): fix bug
	(add_each_gea_to_clist): fix mem leak
	(on_newAccountCurrencyChoosePage_prepare): use pointer<->int
	conversion macros

	* src/SplitLedger.c (xaccSRGetEntryHandler): handle reconcile
	cell string as appropriate for translate flag.

	* src/register/table-allgui.c (gnc_table_get_entry): return
	translated version
	(gnc_table_get_entry_internal): return untranslated version

	* src/register/table-allgui.h: add 'translate' argument to
	entry handler api.

2001-06-08 Christian Stimming <stimming@tuhh.de>

	* configure.in, accounts/Makefile.am, accounts/de_DE/*: add
	account template files for German locale.

	* src/gnome/gnucash.desktop, po/de.po: updated German translation.

2001-06-08  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: update docs

	* src/doc/design/gnucash-design.texinfo: update docs

2001-06-08  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-file-operations.sgml, xacc-quickstart.sgml, 
	xacc-regwin.sgml: updates and corrections.

2001-06-07  Dave Peticolas  <dave@krondo.com>

	* src/scm/price-quotes.scm: same as below

	* src/scm/Makefile.am: same as below

	* src/scm/process.scm: un-modulize process.scm. Let's experiment
	with this after 1.6.

	* src/gnome/new-user-callbacks.c (gnc_get_ea_locale_dir): if first
	check fails, see if 2-letter prefix succeeds

2001-06-07  James LewisMoss  <jimdres@mindspring.com>

	* doc/README.translator.txt (variables): add instructions for